[package]
name = "solaredge_api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
http-adapter-reqwest = "0.3.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
